Fix display overflow issue

--- a/styles.css
+++ b/styles.css
@@ -37,18 +37,20 @@ body {
   width: 300px;
   white-space: nowrap;
   overflow: hidden;
-  display: flex;
-  justify-content: end;
-  align-items: center;
 }
 
 #entry {
-  height: 30px;
-}
-
-#current {
   height: 50px;
   font-size: 40px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+#current,
+#ans {
+  height: 30px;
+  display: inline;
+  text-align: end;
 }
 
 button {
